--- a/privacy.html
+++ b/privacy.html
@@ -161,7 +161,7 @@
     id="navv"
   >
     <div class="container">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="./">
         <img
           src="./assets/img/TGB_logo.png"
           alt="TGB Logo"
@@ -185,10 +185,10 @@
       <div id="navbarSupportedContent" class="collapse navbar-collapse">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item mr-4">
-            <a class="nav-link text-white font-weight-bold" href="#">Home</a>
+            <a class="nav-link text-white font-weight-bold" href="./">Home</a>
           </li>
           <li class="nav-item mr-4">
-            <a class="nav-link text-white" href="#service">Service</a>
+            <a class="nav-link text-white" href="./#service">Service</a>
           </li>
           <li class="nav-item mr-4">
             <a
@@ -198,7 +198,7 @@
             >
           </li>
           <li class="nav-item mr-4">
-            <a class="nav-link text-white" href="/kontak">Kontak</a>
+            <a class="nav-link text-white" href="#kontak">Kontak</a>
           </li>
           <li id="button-daftar" class="nav-item">
             <a class="nav-link" href="./costumer/" target="_self"
@@ -261,17 +261,17 @@
   <div class="col-lg-12 py-3">
     <div class="lbp">
         <h2><strong><u>Umum</u></strong></h2>
-<p>Kebijakan ini mengatur pengumpulan dan penggunaan informasi pribadi Anda oleh Ray White ( Real Estate ) Kemitraan dan entitas terkait , anak perusahaan , karyawan dan franchisee dan karyawan mereka dan agen real estate ( Ray White ). Dari waktu ke waktu kebijakan ini akan ditinjau ulang dan diperbarui , tanpa dilakukan pemberitahuan sebelumnya kepada Anda. Revisi kebijakan akan diposting pada website kami.</p>
-<h3><strong><u>Bagaimana Ray White mengumpulkan informasi pribadi?</u></strong></h3>
-<p>Umumnya Ray White mengumpulkan informasi pribadi langsung dari Anda secara langsung, melalui telepon, surat, fax, email atau ketika Anda memberikan kepada kami melalui website kami, dengan memasukkan kompetisi, promosi atau meminta informasi atau materi dari kami, menyelesaikan survei atau memberikan pendapat. Terkadang Ray White akan mengumpulkan informasi pribadi Anda dari pihak ketiga. Sebagai contoh, kita mungkin perlu untuk mengumpulkan informasi pribadi dari agen pelaporan kredit, perwakilan Anda (seperti penasihat hukum), penasihat keuangan Anda, majikan Anda atau sumber yang tersedia untuk umum informasi atau organisasi lain di mana Anda memberikan persetujuan Anda .</p>
+<p>Zanproject bertanggung jawab atas pengumpulan dan penggunaan informasi pribadi Anda, termasuk yang melibatkan mitra, entitas terkait, anak perusahaan, karyawan, franchisee, dan agen yang bekerja sama dengan kami. Kebijakan ini dapat ditinjau dan diperbarui sewaktu-waktu tanpa pemberitahuan sebelumnya. Versi terbaru kebijakan akan selalu tersedia di situs web resmi kami.</p>
+<h3><strong><u>Bagaimana Zanproject mengumpulkan informasi pribadi?</u></strong></h3>
+<p>Zanproject biasanya mengumpulkan informasi pribadi Anda secara langsung melalui telepon, surat, email, atau melalui situs web kami, seperti saat Anda mengikuti kompetisi, berpartisipasi dalam promosi, meminta informasi atau materi dari kami, mengisi survei, atau memberikan umpan balik. Dalam beberapa kasus, Zanproject juga dapat memperoleh informasi pribadi Anda dari pihak ketiga. Sebagai contoh, kami mungkin menerima informasi dari agen pelaporan kredit, perwakilan Anda (seperti penasihat hukum), penasihat keuangan, pemberi kerja Anda, atau sumber informasi yang tersedia secara umum, dengan persetujuan Anda.</p>
 <h3><strong><u>Apa informasi pribadi yang kami kumpulkan?</u></strong></h3>
-<p>Umumnya kita mengumpulkan nama, alamat, nomor telepon, alamat email, pekerjaan, informasi keuangan, dan informasi lain tentang Anda untuk memungkinkan kita menilai kebutuhan Anda dalam kaitannya dengan real estate dan produk dan layanan terkait. Kami juga mengumpulkan informasi yang diperlukan untuk digunakan dalam kegiatan bisnis Ray White. Kami menggunakan informasi yang dikumpulkan untuk menyediakan dan mempromosikan layanan Ray White kepada Anda , termasuk :</p>
+<p>Kami umumnya mengumpulkan nama, alamat, nomor telepon, alamat email, pekerjaan, informasi keuangan, dan informasi lainnya yang relevan untuk memahami kebutuhan Anda terkait layanan kami. Informasi ini juga diperlukan untuk mendukung berbagai aktivitas bisnis Zanproject. Data yang kami kumpulkan digunakan untuk menyediakan dan mempromosikan layanan kami, termasuk  :</p>
 <ol>
 <li>Melakukan bisnis kami ; dan</li>
 <li>Mengkomunikasikan informasi tentang produk dan layanan kami kepada Anda; dan</li>
 <li>Untuk administrasi , pemasaran , perencanaan , pengembangan dan penelitian persyaratan internal kami.</li>
 </ol>
-<p>Ray White dapat mengungkapkan dan menggunakan informasi pribadi Anda untuk tujuan yang terkait , antara lain:</p>
+<p>Zanproject dapat mengungkapkan dan menggunakan informasi pribadi Anda untuk tujuan yang berkaitan, di antaranya:</p>
 <ol>
 <li>Pelaporan peraturan dan kontrak dan kepatuhan; dan</li>
 <li>Mengembangkan , meningkatkan dan memasarkan produk dan layanan kami; dan</li>
@@ -280,32 +280,27 @@
 <li>Menganalisis tren dalam penjualan; dan</li>
 <li>Pengungkapan informasi.</li>
 </ol>
-<p>Ray White merupakan jaringan waralaba dan informasi pribadi Anda akan diungkapkan antara franchisee dan franchisor dalam jaringan untuk memungkinkan kita dalam melakukan bisnis Ray White. Ray White dapat mengungkapkan informasi pribadi Anda yang diizinkan atau diharuskan oleh hukum, badan-badan pengatur dan penegakan hukum dan penyedia layanan pihak ketiga dimana Ray White bertindak sebagai agen dalam pengumpulan informasi pribadi Anda, Ray White mengumpulkan informasi atas nama pihak untuk siapa Ray White bertindak sebagai agen baik untuk keperluan Ray White dan/ atau untuk keperluan internal mereka. Sehubungan dengan hal di atas, Ray White melakukan kontrak dengan pihak ketiga adalah semata-mata untuk melakukan layanan guna meningkatkan pelayanan Ray White, pihak-pihak ketiga dapat menangani informasi pribadi Anda dan hanya harus menggunakan informasi tersebut untuk tujuan yang disediakan meskipun kami tidak bertanggung jawab untuk memastikan ini.</p>
+<p>Zanproject adalah bagian dari jaringan waralaba, dan informasi pribadi Anda dapat dibagikan antara franchisee dan franchisor dalam jaringan ini untuk mendukung operasional bisnis Zanproject. Kami juga dapat mengungkapkan informasi pribadi Anda sebagaimana diizinkan atau diwajibkan oleh hukum, kepada badan pengatur, penegak hukum, atau penyedia layanan pihak ketiga. Dalam beberapa kasus, Zanproject bertindak sebagai agen dalam pengumpulan informasi pribadi atas nama pihak ketiga untuk keperluan internal atau kebutuhan operasional mereka.
+  Untuk meningkatkan kualitas layanan, Zanproject mungkin menjalin kerja sama dengan pihak ketiga yang bertugas menangani informasi pribadi Anda. Pihak ketiga ini hanya diperbolehkan menggunakan informasi pribadi Anda sesuai dengan tujuan yang telah ditentukan, meskipun kami tidak bertanggung jawab atas pengelolaan informasi tersebut oleh pihak ketiga.</p>
 <p>&nbsp;<br></p>
 <h3><strong><u>Mengakses informasi Anda</u></strong></h3>
-<p>Anda berhak untuk meminta akses ke informasi pribadi Anda sesuai dengan undang-undang privasi yang berlaku. Anda dapat meminta informasi tentang Anda untuk diperbaiki jika informasi tentang Anda tidak akurat , tidak lengkap atau terdapat perubahan sedemikian rupa dimana hal tersebut harus disertakan kedalam informasi tentang Anda. Apabila diminta, Ray White akan mengambil langkah-langkah yang wajar untuk memperbaiki informasi tentang Anda.</p>
+<p>Anda berhak untuk meminta akses terhadap informasi pribadi Anda sesuai dengan ketentuan undang-undang privasi yang berlaku. Anda juga dapat meminta perbaikan atas informasi yang tidak akurat, tidak lengkap, atau jika ada perubahan yang perlu diperbarui dalam data pribadi Anda. Jika diminta, Zanproject akan mengambil langkah yang wajar untuk memperbaiki informasi yang ada tentang Anda.</p>
 <p>&nbsp;<br></p>
 <h3><strong><u>Penyimpanan informasi</u></strong></h3>
-<p>Ray White akan mengambil langkah-langkah untuk :</p>
+<p>Zanproject akan mengambil langkah-langkah yang diperlukan untuk :</p>
 <ol>
 <li>Memastikan bahwa informasi pribadi yang dikumpulkan dan digunakan adalah akurat, lengkap, dan tepat; dan</li>
 <li>Menghancurkan atau menghapus secara permanen informasi pribadi tentang Anda jika tidak lagi membutuhkannya untuk tujuan apapun; dan</li>
 <li>Melindungi informasi pribadi Anda dari penyalahgunaan, kehilangan, dan dari akses yang tidak sah , modifikasi atau pengungkapan selain dari pihak ketiga seperti telah disebutkan di atas.</li>
 </ol>
 <p>&nbsp;<br></p>
-<h3><strong><u>Menghubungi kami</u></strong></h3>
-<p>Jika Anda memiliki pertanyaan mengenai kebijakan privasi kami, Anda dapat menghubungi kantor Ray White dengan menggunakan rincian kontak di bawah ini.</p>
-<p>Sahid Sudirman Center, 43E Floor Jl. Jend.Sudirman No. 86, Jakarta 10220, Indonesia &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br> Jakarta Pusat, DKI Jakarta &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br> Phone: (62-21) 3922 777, Fax: (62-21) 3925 528 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br> Email: corporate.rwi@raywhite.co.id</p>
+<h3 id="kontak"><strong><u>Menghubungi kami</u></strong></h3>
+<p>Jika Anda memiliki pertanyaan mengenai kebijakan privasi ini, Anda dapat menghubungi kantor Zanproject melalui rincian kontak yang tercantum di bawah ini.</p>
+<p>Jl. H. Sayan No. 60 C, Pabuaran Mekar Kec. Cibinong, Kab. Bogor, Jawa Barat &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br> Jakarta Pusat, DKI Jakarta &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br> Phone: (62-21) 3922 777, Fax: (62-21) 3925 528 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br> Email: tirogemilangbersama@gmail.com</p>
 <p>&nbsp;<br></p>
 </div>
 </div>
 </section>
-
-
-
-
-
-
 
   <!-- Footer -->
   <footer class="footer d-flex justify-content-center align-items-center">
