--- a/costumer/Dashboard/privacy.html
+++ b/costumer/Dashboard/privacy.html
@@ -201,7 +201,7 @@
             <a class="nav-link text-white" href="#kontak">Kontak</a>
           </li>
           <li id="button-daftar" class="nav-item">
-            <a class="nav-link" href="./costumer/" target="_self"
+            <a class="nav-link" href="./" target="_self"
               >Wujudkan Impian</a
             >
           </li>
