--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--Icon-->
     <link
       rel="shortcut icon"
-      href="./assets/img/logo.ico"
+      href="assets/img/TGB_logo.png"
       type="image/x-icon"
     />
     <!-- Bootstrap -->
@@ -74,7 +74,7 @@
               >
             </li>
             <li class="nav-item mr-4">
-              <a class="nav-link text-white" href="/kontak">Kontak</a>
+              <a class="nav-link text-white" href="#link">Kontak</a>
             </li>
             <li id="button-daftar" class="nav-item">
               <a class="nav-link" href="./costumer/" target="_self"
@@ -1186,7 +1186,7 @@
             <div class="row">
               <div class="col-lg-4 col-md-5 col-sm-6 col-5">
                 <img
-                  src="./assets/img/logo.ico"
+                  src="assets/img/TGB_logo.png"
                   alt="ZanProject Contact"
                   class="img-fluid"
                 />
